Added tools.clj